// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setFormErrors doesn't sets an error on unknown field 1`] = `
Object {
  "questionPeriod": Object {
    "fieldOptions": Object {
      "notExist": Object {
        "errorMessages": "Sub field does not exist",
      },
    },
    "type": "period",
  },
  "questionString": Object {
    "type": "text",
  },
}
`;

exports[`setFormErrors sets error messages on different fields 1`] = `
Object {
  "questionPeriod": Object {
    "fieldOptions": Object {
      "from": Object {
        "errorMessages": Array [
          "Error questionPeriod 1",
          "Error questionPeriod 2",
        ],
      },
      "to": Object {
        "errorMessages": Array [
          "Error questionPeriod to 1",
          "Error questionPeriod to 2",
        ],
      },
    },
    "type": "period",
  },
  "questionString": Object {
    "fieldOptions": Object {
      "errorMessages": Array [
        "error string 1",
        "error string 2",
      ],
    },
    "type": "text",
  },
}
`;
